<resources>
    <string name="app_name">Sunrise Settings</string>
    <string name="alarm">Alarm:</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="communication_error">Unable to communicate with Sunrise Alarm.  Check connection to device and refresh alarms.</string>
    <string name="preference_file_key">com.nathanjwarfield.sunrisesettings.PREFERENCE_FILE_KEY</string>
    <string name="alarm_address_key">saved_alarm_address</string>
    <string name="alarm_default_address">local.sunrise-alarm.com</string>
</resources>